Fix some source issues due to legacy API usage (for java 8, building with java 21)